# dlt-shim

./: README.md  pyproject.toml
dlt_shim/: __init__.py  shim.py
src/: __init__.py
tests/: test_shim.py
