[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlt-shim"
version = "0.0.1"
authors = [
    { name = "Stephen Carman", email = "stephen.carman@databricks.com" },
]
description = "A small wrapper around dlt for development assistance "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
